# nerve

./: .gitmodules  CMakeLists.txt  COPYING  Doxyfile.default  INSTALL  README  README.gapless  TODO
build-aux/: btest.cmake  butil.cmake  description.txt  doxygen.cmake  manpage.cmake  nerve_config.hpp.cmake  nerved_config.hpp.cmake  test-functions.cmake
doc/: nerve.1.txt  pipeline-spec.txt
doc/man/: nerve.1  nerved.1
src/: CMakeLists.txt  README
src/config-proto/: CMakeLists.txt  README  TODO  TODO.config  bin  c_string.hpp  config_parser.cpp  config_parser.hpp  dump_config_yaml.cpp  error_reporter.hpp  flex_definitions.hpp  flex_interface.hpp  grammar.lemon  grammar_header.inc.hpp  lemon_definitions.hpp  lemon_interface.cpp  lemon_interface.hpp  lexer.l  lexer_header.inc.hpp  main.cpp  make_pipeline.hpp  nerve_config.hpp  parse_context.cpp  parse_context.hpp  parse_location.hpp  pipeline_configs.cpp  pipeline_configs.hpp  player.hpp  pooled.cpp  pooled.hpp  pooled_stl.hpp  semantic_checker.hpp  threads.conf
src/daemon-proto/: TODO  main.cpp
src/gapless-proto/: CMakeLists.txt  TODO
src/gapless-proto/gapless-playback/: chunkinate.cpp  degapifier.cpp  main.cpp  mktags.sh  output.cpp  output.hpp  packet_state.hpp  play.cpp  play.hpp  playlist.hpp  portabdbg.hpp  portapara.hpp  shared_data.hpp
src/include/: aligned_memory.hpp
src/nerve/: CMakeLists.txt  main.cpp  nerve-play  settings.cpp  settings.hpp
src/nerved/: CMakeLists.txt  README  TODO  config_defines.hpp  defines.hpp  main.cpp  np  pipeline  server
src/nerved/btrace/: README  TODO  arch.hpp  assert.cpp  assert.hpp  backtrace.cpp  backtrace.hpp  crash_detector.cpp  crash_detector.hpp  demangle.cpp  demangle.hpp  mkdwarf.sh  mktestcrash.sh  testcrash.cpp
src/nerved/btrace/detail/: asserts.hpp
src/nerved/cli/: parse.cpp  parse.hpp  settings.cpp  settings.hpp
src/nerved/config/: TODO.config  c_string.hpp  config_parser.cpp  config_parser.hpp  dump_config_yaml.cpp  error_reporter.hpp  flex_interface.hpp  grammar.lemon  grammar_header.inc.hpp  lemon_interface.hpp  lexer.l  lexer_header.inc.hpp  parse.cpp  parse.hpp  parse_context.cpp  parse_context.hpp  pipeline_configs.cpp  pipeline_configs.hpp  semantic_checker.cpp  semantic_checker.hpp  trace_defines.hpp
src/nerved/output/: TODO.output  configure.cpp  configure.hpp  ideas.cpp  logger.cpp  logger.hpp  logging.cpp  logging.hpp
src/nerved/para/: README  actions.hpp  monitors.hpp  pipes.hpp  pointers.hpp  syncs.hpp
src/nerved/pipeline/: README  TODO.pipeline  configure.cpp  configure.hpp  connection.hpp  connectors.hpp  input_stage.hpp  input_stage_sequence.cpp  input_stage_sequence.hpp  ipc.hpp  job.cpp  job.hpp  local_pipe.hpp  observer_stage_sequence.cpp  observer_stage_sequence.hpp  output_stage.hpp  packet.hpp  packet_return.hpp  pipe_junction.hpp  pipeline_data.cpp  pipeline_data.hpp  process_stage_sequence.cpp  process_stage_sequence.hpp  progressive_buffer.cpp  progressive_buffer.hpp  section.cpp  section.hpp  simple_stages.hpp  stage_data.cpp  stage_data.hpp  stage_sequence.cpp  stage_sequence.hpp  terminators.hpp  thread_pipe.hpp
src/nerved/player/: run.cpp  run.hpp  state.hpp
src/nerved/server/: local_server.cpp  local_server.hpp  protocol.cpp.rl  protocol.hpp  session.cpp  session.hpp
src/nerved/stages/: built_in_stages.hpp  create.cpp  create.hpp  ffmpeg.cpp  ffmpeg.hpp  ffmpeg_input.cpp  ffmpeg_input.hpp  information.cpp  information.hpp  interfaces.hpp  sdl.cpp  sdl.hpp  stage_data.hpp
src/nerved/stages/ffmpeg/: audio_stream.hpp  avlibs.hpp  decode_audio.hpp  file.cpp  file.hpp  frame.hpp
src/nerved/util/: asserts.hpp  btrace_defines.hpp  c_string.hpp  indirect.hpp  pooled.cpp  pooled.hpp
src/plugin-proto/: TODO  asserts.hpp  check-compile.sh  data_pipe.hpp  main.cpp  packet.hpp  para.hpp  player.hpp  process_driver.hpp  settings.hpp  specification-bits.cpp  specification.txt
src/plugin-proto/pipeline/: TODO  configure.cpp  configure.hpp  input_stage_sequence.hpp  job.hpp  observer_stage_sequence.hpp  packet_return.hpp  process_stage_sequence.hpp  progressive_buffer.hpp  section.hpp  special_stages.hpp  stage_sequence.hpp
src/research/: interrupted-playback.cpp  tripple-gapless-playback.cpp
src/research/gapless-playback/: aligned_memory.hpp  chunkinate.cpp  chunkinate.hpp  degapifier.cpp  degapifier.hpp  dump_file.cpp  dump_file.hpp  ffmpeg-decoder.cpp  ffmpeg.hpp  file_output.hpp  main.cpp  old-ffmpeg-decoder.cpp  output.cpp  play.cpp  sdl.hpp  shared_data.cpp  shared_data.hpp
src/research/simple-media-player/: aligned_memory.hpp  ffmpeg-decoder.cpp  ffmpeg.hpp  load_file_test.cpp  load_file_test.hpp  main.cpp  play.cpp  play.hpp  read_packets.cpp  read_packets.hpp  sdl.hpp  shared_data.cpp  shared_data.hpp
src/research/tune/: data.hpp  main.cpp  settings.cpp  settings.hpp
src/socket-proto/: CMakeLists.txt  TODO  client  client.cpp  client.rb  make.sh  server  server.cpp
src/wrappers/: ffmpeg.hpp  sdl.hpp
src/wrappers/ffmpeg/: aligned_memory.hpp  audio_decoder.hpp  audio_stream.hpp  data.hpp  file.hpp  frame.hpp  packet.hpp  packet_reader.hpp  packet_state.hpp
test/: README
test/_data/gaps/: README
test/_data/gaps/gapless-mp3/: README
test/_data/gaps/gapless-pathalogical/: README
